--- a/app/views/templates/watchlist-panel.html
+++ b/app/views/templates/watchlist-panel.html
@@ -15,7 +15,7 @@
 
         <div class="list-group">
             <!-- [3] Repeat over each list in watchlists and create link -->
-            <a class="list-group-item" ng-repeat="list in watchlists track by $index">
+            <a class="list-group-item" ng-class="{ active: currentList == list.id}" ng-repeat="list in watchlists track by $index" ng-click="gotoList(list.id)">
                 {{list.name}}
                 <button type="button" class="close" ng-click="deleteList(list)">&times;</button>
             </a>
