--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -8,7 +8,7 @@
     <div class="col-md-9">
         <div class="panel panel-info">
             <div class="panel-heading">
-                <span class="glyphicon glyphicon-overview"></span> Portfolio Overview
+                <span class="glyphicon glyphicon-globe"></span> Portfolio Overview
             </div>
             <div class="panel-body">
             </div>
